--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,6 +186,19 @@ header .navbar ul li a:hover {
   gap: 1.5rem;
   min-height: 100vh;
   align-items: center;
+  background: rgb(180, 128, 44);
+  background: linear-gradient(
+    90deg,
+    rgba(180, 128, 44, 1) 0%,
+    rgba(251, 251, 251, 1) 0%,
+    rgba(217, 228, 241, 1) 100%,
+    rgba(37, 107, 186, 1) 100%,
+    rgba(29, 128, 200, 1) 100%,
+    rgba(24, 144, 211, 1) 100%,
+    rgba(22, 149, 214, 1) 100%,
+    rgba(2, 0, 36, 1) 100%,
+    rgba(0, 212, 255, 1) 100%
+  );
 }
 .home #particles-js {
   position: absolute;
