--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -341,11 +341,14 @@ header .navbar ul li a:hover {
   .home .btn {
     margin: 4rem 0;
   }
+  .home .content {
+    margin-top: 50px;
+  }
   .socials {
     margin-top: 12rem;
   }
   .home .image img {
-    margin-top: -12rem;
+    margin-top: -1rem;
   }
   .home .content p {
     font-size: 2.2rem;
@@ -1095,6 +1098,9 @@ form .button-area {
   .contact .content form {
     width: 100%;
     margin-right: 2rem;
+  }
+  .contact .button-area {
+    margin-left: 19px;
   }
 }
 /* contact section media queries ends */
